modified to use https

--- a/ABNLookupSampleCodeCSharp35/SampleAbnLookupClient/app.config
+++ b/ABNLookupSampleCodeCSharp35/SampleAbnLookupClient/app.config
@@ -4,8 +4,8 @@
       <add key="RequestTimeoutInMilliseconds" value="100000" />
       <add key="Proxy" value="" />
       <add key="Guid" value="enter-your-guid-here" />
-      <add key="Rpc.SearchUrl" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRXMLSearch.asmx" />
-      <add key="Document.SearchUrl" value="http://abr.business.gov.au/ABRXMLSearch/ABRXMLSearch.asmx" />
+      <add key="Rpc.SearchUrl" value="https://abr.business.gov.au/ABRXMLSearchRPC/ABRXMLSearch.asmx" />
+      <add key="Document.SearchUrl" value="https://abr.business.gov.au/ABRXMLSearch/ABRXMLSearch.asmx" />
       <add key="Rpc.SoapAction.AbnSearch" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRSearchByABN" />
       <add key="Rpc.SoapAction.AsicSearch" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRSearchByASIC" />
       <add key="Rpc.SoapAction.NameSearch" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRSearchByName" />
@@ -22,66 +22,50 @@
             <binding name="ABRXMLSearchSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
               receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
               bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-              maxBufferSize="131072" maxBufferPoolSize="524288" maxReceivedMessageSize="131072"
+              maxBufferSize="524288" maxBufferPoolSize="524288" maxReceivedMessageSize="524288"
               messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
               useDefaultWebProxy="true">
                <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                  maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-               <security mode="None">
-                  <transport clientCredentialType="None" proxyCredentialType="None"
-                    realm="" />
-                  <message clientCredentialType="UserName" algorithmSuite="Default" />
-               </security>
+               <security mode="Transport" />
             </binding>
             <binding name="ABRXMLSearchRPCSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
               receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
               bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-              maxBufferSize="131072" maxBufferPoolSize="524288" maxReceivedMessageSize="131072"
+              maxBufferSize="524288" maxBufferPoolSize="524288" maxReceivedMessageSize="524288"
               messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
               useDefaultWebProxy="true">
                <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                  maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-               <security mode="None">
-                  <transport clientCredentialType="None" proxyCredentialType="None"
-                    realm="" />
-                  <message clientCredentialType="UserName" algorithmSuite="Default" />
-               </security>
+               <security mode="Transport" />
             </binding>
             <binding name="ABRXMLSearchRPCSoap1" closeTimeout="00:01:00"
               openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
               allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-              maxBufferSize="131072" maxBufferPoolSize="524288" maxReceivedMessageSize="131072"
+              maxBufferSize="524288" maxBufferPoolSize="524288" maxReceivedMessageSize="524288"
               messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
               useDefaultWebProxy="true">
                <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="131072"
                  maxBytesPerRead="4096" maxNameTableCharCount="131072" />
-               <security mode="None">
-                  <transport clientCredentialType="None" proxyCredentialType="None"
-                    realm="" />
-                  <message clientCredentialType="UserName" algorithmSuite="Default" />
-               </security>
+               <security mode="Transport" />
             </binding>
             <binding name="ABRXMLSearchSoap1" closeTimeout="00:01:00" openTimeout="00:01:00"
               receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
               bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-              maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+              maxBufferSize="524288" maxBufferPoolSize="524288" maxReceivedMessageSize="524288"
               messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
               useDefaultWebProxy="true">
                <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                  maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-               <security mode="None">
-                  <transport clientCredentialType="None" proxyCredentialType="None"
-                    realm="" />
-                  <message clientCredentialType="UserName" algorithmSuite="Default" />
-               </security>
+               <security mode="Transport" />
             </binding>
          </basicHttpBinding>
       </bindings>
       <client>
-         <endpoint address="http://abr.business.gov.au/AbrXmlSearch/AbrXmlSearch.asmx"
+         <endpoint address="https://abr.business.gov.au/AbrXmlSearch/AbrXmlSearch.asmx"
            binding="basicHttpBinding" bindingConfiguration="ABRXMLSearchSoap"
            contract="ServiceReferenceAbnLookup.ABRXMLSearchSoap" name="ABRXMLSearchSoap" />
-         <endpoint address="http://abr.business.gov.au/AbrXmlSearchRpc/AbrXmlSearch.asmx"
+         <endpoint address="https://abr.business.gov.au/AbrXmlSearchRpc/AbrXmlSearch.asmx"
            binding="basicHttpBinding" bindingConfiguration="ABRXMLSearchRPCSoap"
            contract="ServiceReferenceAbnLookupRpc.ABRXMLSearchRPCSoap"
            name="ABRXMLSearchRPCSoap" />
