modified to use https

--- a/ABNLookupSampleCodeVBDotNet/ABRXMLSearchClient/App.config
+++ b/ABNLookupSampleCodeVBDotNet/ABRXMLSearchClient/App.config
@@ -5,8 +5,8 @@
 		<add key="WebRequestTimeoutInMilliseconds" value="100000"/>
 
 		<add key="PubSubDownloadURL" value="http://abr.business.gov.au/abrxmlpubsub/abrfiledownload.aspx"/>
-		<add key="RPC.ABRXMLSearchURL" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRXMLSearch.asmx"/>
-		<add key="Document.ABRXMLSearchURL" value="http://abr.business.gov.au/ABRXMLSearch/ABRXMLSearch.asmx"/>
+		<add key="RPC.ABRXMLSearchURL" value="https://abr.business.gov.au/ABRXMLSearchRPC/ABRXMLSearch.asmx"/>
+		<add key="Document.ABRXMLSearchURL" value="https://abr.business.gov.au/ABRXMLSearch/ABRXMLSearch.asmx"/>
 
 		<add key="RPC.SoapAction.ABNSearch" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRSearchByABN"/>
 		<add key="RPC.SoapAction.ASICSearch" value="http://abr.business.gov.au/ABRXMLSearchRPC/ABRSearchByASIC"/>
